// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composant Chart > Configuration des options > devrait correctement configurer les options de légende 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    />
  </div>
</div>
`;

exports[`Composant Chart > Configuration des options > devrait fusionner correctement les options par défaut avec les options personnalisées 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    />
  </div>
</div>
`;

exports[`Composant Chart > Snapshots > devrait correspondre au snapshot avec les props par défaut 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    />
  </div>
</div>
`;

exports[`Composant Chart > Snapshots > devrait correspondre au snapshot avec un titre personnalisé 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    >
      Graphique de test
    </div>
  </div>
</div>
`;

exports[`Composant Chart > Snapshots > devrait correspondre au snapshot pour un graphique en aire polaire 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    />
  </div>
</div>
`;

exports[`Composant Chart > Snapshots > devrait correspondre au snapshot pour un graphique en donut 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    />
  </div>
</div>
`;

exports[`Composant Chart > Snapshots > devrait correspondre au snapshot pour un graphique en ligne 1`] = `
<div>
  <div
    class="relative w-full h-max flex flex-col items-center border border-border justify-center bg-white dark:bg-content1 p-6 shadow-md rounded-xl"
  >
    <div
      data-testid="mock-chart"
    />
  </div>
</div>
`;
